--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+venv
 .Python
 env/
 build/
@@ -85,6 +86,8 @@ celerybeat-schedule
 # virtualenv
 .venv
 venv/
+/venv
+venv
 ENV/
 .vscode
 # Spyder project settings
