--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ astroid==2.4.2
 colorama==0.4.4
 dj-database-url==0.5.0
 Django==2.2.3
+django-crispy-forms==1.9.2
 gunicorn==20.0.4
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+Pillow==8.0.1
 psycopg2==2.8.6
 pylint==2.6.0
 python-decouple==3.3
